--- a/app/src/main/res/layout/activity_item_page.xml
+++ b/app/src/main/res/layout/activity_item_page.xml
@@ -1,71 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ItemPageActivity"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <include layout="@layout/appbar"
+    <include
         android:id="@+id/itempage_appbar"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"/>
-
-    <ImageView
+        layout="@layout/appbar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginTop="20dp"
-        android:id="@+id/itempage_image"
-        android:src="#212121"
-        android:layout_below="@id/itempage_appbar"
-        android:layout_gravity="center"
-        />
+        android:layout_height="wrap_content" />
 
-    <TextView
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_margin="15dp"
-        android:text="Item Name"
-        android:textSize="30sp"
-        android:layout_below="@+id/itempage_image"
-        android:textStyle="bold"
-        android:textColor="#212121"
-        android:id="@+id/itempage_itemname"/>
-    <TextView
+        android:layout_margin="10dp">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".ItemPageActivity">
+
+
+            <ImageView
+                android:id="@+id/itempage_image"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:src="#212121" />
+
+            <TextView
+                android:id="@+id/itempage_itemname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:gravity="center"
+                android:text="@string/item_name"
+                android:textColor="#212121"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:textSize="22sp"
-        android:id="@+id/itempageDescription"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="15dp"
-        android:layout_below="@+id/itempage_itemname"
-        android:text="Description"
-        android:textColor="@color/colorAccent"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:id="@+id/lineitem"
-        android:layout_below="@+id/itempageDescription"
-        android:background="@color/colorAccent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginRight="15dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="sample Description"
-        android:textSize="20sp"
-        android:layout_below="@+id/itempageDescription"
-        android:textColor="#212121"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="left"
-        android:id="@+id/itempage_desc"/>
+            <TextView
+                android:id="@+id/itempageDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:text="Description"
+                android:textColor="@color/colorAccent"
+                android:textSize="22sp" />
 
-</RelativeLayout>
+            <View
+                android:id="@+id/lineitem"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="15dp"
+                android:background="@color/colorAccent" />
+
+            <TextView
+                android:id="@+id/itempage_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:text="sample Description"
+                android:textColor="#212121"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
