--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -20,7 +20,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:hint="Product Name">
+        android:hint="@string/product_name">
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -38,7 +38,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/colorAccent"
-        android:text="Upload image"
+        android:text="@string/upload_image"
         android:textColor="#ffffff"
         android:textSize="14dp" />
 
@@ -51,7 +51,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:backgroundTint="@color/colorAccent"
-        android:text="Delete Image"
+        android:text="@string/delete_image"
         android:textColor="#ffffff"
         android:textSize="14dp" />
 
@@ -77,7 +77,7 @@
         android:backgroundTint="#008000"
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
-        android:text="Add"
+        android:text="@string/add"
         android:textColor="#ffffff"
         android:textSize="14dp" />
 
@@ -91,7 +91,7 @@
         android:backgroundTint="#ff0000"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="Delete"
+        android:text="@string/delete"
         android:visibility="invisible"
         android:clickable="false"
         android:textColor="#ffffff"
