--- a/app/src/main/res/layout/single_item_layout.xml
+++ b/app/src/main/res/layout/single_item_layout.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
+    android:layout_margin="5dp"
     >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
@@ -13,7 +13,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:src="#212121"
+        android:src="@drawable/hrc"
         android:id="@+id/productimage"
         android:layout_centerInParent="true"
         android:layout_margin="5dp"/>
