--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,13 +24,13 @@
         android:gravity="center"/>
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_margin="20dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+
         android:minWidth="0dp"
         android:layout_gravity="center"
         android:minHeight="0dp"
-        android:background="#212121"/>
+        android:src="@drawable/hrc" />
 
     <Button
         android:id="@+id/main_AboutUsBtn"
