--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -203,4 +207,37 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="5dp">
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            android:text="@string/products"
+            android:background="@drawable/rectanglebg"
+            android:layout_margin="10dp"
+            android:textSize="18sp"
+            android:layout_marginBottom="10dp"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/contactus_productsBtn" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            android:text="@string/about_us"
+            android:background="@drawable/rectanglebg"
+            android:layout_margin="10dp"
+            android:textSize="18sp"
+            android:layout_marginBottom="10dp"
+            android:layout_alignParentRight="true"
+            android:id="@+id/contact_AboutUsBtn" />
+    </RelativeLayout>
+
 </LinearLayout>
+
+</ScrollView>
