--- a/app/src/main/res/layout/single_item_layout.xml
+++ b/app/src/main/res/layout/single_item_layout.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/watermark"
         android:layout_width="wrap_content"
-        android:layout_height="160dp"
+        android:layout_height="172dp"
         android:scaleType="fitXY"
         android:src="@drawable/watermark" />
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -27,7 +27,7 @@
         android:layout_margin="5dp"/>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="20sp"
+        android:layout_height="wrap_content"
         android:text="Item Name"
         android:textSize="18sp"
         android:textColor="#212121"
